--- a/laboratory-parent/laboratory-spring/laboratory-portal/src/main/webapp/index.html
+++ b/laboratory-parent/laboratory-spring/laboratory-portal/src/main/webapp/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <script src="js/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
     Hello spring!
+    <input id="name" name="name" />
+    <button id="echoButton">Echo</button>
 </body>
 </html>
