Doing. Global and local components.

--- a/laboratory-vue/helloworld/index.html
+++ b/laboratory-vue/helloworld/index.html
@@ -114,8 +114,12 @@
              <td>{{average}}</td>
          </tr>
          </tbody>
-
      </table>
+ </div>
+ <div id="vueDiv7">
+     <h5>全局及局部组件</h5>
+     <alert_public></alert_public>
+     <alert_private/>
  </div>
  <script src="node_modules/vue/dist/vue.js"></script>
  <script src="js/index.js"></script>
