--- a/laboratory-vue/helloworld/index.html
+++ b/laboratory-vue/helloworld/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Hello world</title>
     <style>
+        h5{
+            color:#e65100;
+        }
         .redColor{
             color: red;
         }
